[package]
name = "radiance"
version = "0.1.0"
edition = "2024"

[dependencies]
# pingora = { git = "https://github.com/infiniwave/pingora", features = ["rustls"] }
# pingora-core = { git = "https://github.com/infiniwave/pingora", features = ["rustls"] }
# pingora-proxy = { git = "https://github.com/infiniwave/pingora", features = ["rustls"] }
# pingora-load-balancing = { git = "https://github.com/infiniwave/pingora", features = ["rustls"] }
pingora = { version = "0.6.0", features = ["rustls"] }
pingora-core = { version = "0.6.0", features = ["rustls"] }
pingora-proxy = { version = "0.6.0", features = ["rustls"] }
pingora-load-balancing = { version = "0.6.0", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
serde = "1.0.219"
serde_json = "1.0.140"
mongodb = "3.3.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
futures-util = "0.3.31"
dotenvy = "0.15.7"
rustls = { version = "0.23.32", features = ["ring"] }
instant-acme = "0.8.3"
vaultrs = "0.7.4"
toml = "0.9.10"
anyhow = "1.0.100"
partially = { version = "0.2.1", features = ["derive"] }
http = "1.4.0"
ulid = "1.2.1"
